# pointgrey_ladybug

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  package.xml
debs/: README  releasenotes.txt
launch/: test.launch
src/ladybug/: ladybug_driver.cpp
